Fixed nav document links, created full width BG section, heading and layout spacing fixes

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,6 @@
 
 body {
 	background-color: #202020;
-	width: 1140px;
 	margin: 0 auto;
 	font-family: "OpenSansReg";
 	color: #000;
@@ -28,6 +27,7 @@ body {
 p {
 	margin: 10px 0;
 	color: #ffffff;
+	line-height: 2;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -41,6 +41,9 @@ h1 {
 	display: inline-block;
 	position: relative;
 	width: 100%;
+	margin: 30px 0;
+	display: inline-block;
+	text-transform: uppercase;
 }
 
 h1:after {
@@ -48,7 +51,7 @@ h1:after {
   display: block;
   width: 75%;
   background: #c70101;
-  height: 7px;
+  height: 5px;
   position: absolute;
   left: 26%;
   top: 50%;
@@ -77,6 +80,8 @@ li {
     display: inline;
 }
 
+/* ----------------- Global CSS/Layout Classes ---------------------- */	
+
 .button-red {
 	padding: 10px 20px;
 	display: inline-block;
@@ -94,6 +99,7 @@ li {
 	background: -ms-linear-gradient(top, #cb0101 0%,#be0000 100%); /* IE10+ */
 	background: linear-gradient(to bottom, #cb0101 0%,#be0000 100%); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cb0101', endColorstr='#be0000',GradientType=0 ); /* IE6-9 */
+	text-transform: uppercase;
 }
 
 .button-red:hover {
@@ -124,6 +130,7 @@ li {
 	background: -ms-linear-gradient(top, #515050 0%,#414040 100%); /* IE10+ */
 	background: linear-gradient(to bottom, #515050 0%,#414040 100%); /* W3C */
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#515050', endColorstr='#414040',GradientType=0 ); /* IE6-9 */
+	text-transform: uppercase;
 }
 
 .button-gray:hover {
@@ -149,32 +156,81 @@ li {
 	padding: 1em;
 	color: #fff;
 	border-radius: 7px;
-	margin: 1em 0;
+	margin: 2em 0;
+	display: inline-block;
 	box-shadow: 1px 1px 3px rgba(0,0,0,0.5);
 }
 
-.nav{
-	background: #cb0101; /* Old browsers */
-	background: -moz-linear-gradient(top, #cb0101 0%, #be0000 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#cb0101), color-stop(100%,#be0000)); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top, #cb0101 0%,#be0000 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top, #cb0101 0%,#be0000 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top, #cb0101 0%,#be0000 100%); /* IE10+ */
-	background: linear-gradient(to bottom, #cb0101 0%,#be0000 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cb0101', endColorstr='#be0000',GradientType=0 ); /* IE6-9 */
+.center {
+	margin: 0 auto;
+	text-align: center;
+}
+
+.fr {
+	float: right;
+}
+
+.fl {
+	float: left;
+}
+
+/* ----------------- Page Styling ---------------------- */	
+
+.featured {
+	margin: 0 0 4em;
+}
+
+nav{
+	background: #890000; /* Old browsers */
+	background: -moz-linear-gradient(top, #890000 0%, #be0000 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#890000), color-stop(100%,#be0000)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #890000 0%,#be0000 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #890000 0%,#be0000 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top, #890000 0%,#be0000 100%); /* IE10+ */
+	background: linear-gradient(to bottom, #890000 0%,#be0000 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#890000', endColorstr='#be0000',GradientType=0 ); /* IE6-9 */
+	width: 100%;
+	box-shadow: 0px 0px 1px rgba(0,0,0,0.8);
+	padding: 10px 0;
 	}
 .nav a{
 	font-family: "AeroMatics";
 	font-size:24px;
 	color: #FFFFFF;
 	text-decoration:none;
-	margin: 20px;
+	margin: 20px 36px;
+	padding: 5px 10px;
+	transition: .2s ease;
 	}
+.nav a:hover {
+	background: #8d0000;
+	border-radius: 7px;
+}
 
-.footer{
-	background-color: #c70101;
-	color: #ffffff;
-	}
+.banner {
+	margin: 0;
+	padding: 0;
+}
+
+.section-bg {
+	background: url(../img/section-bg.png) no-repeat bottom center fixed;
+	background-size: 100%;
+	background-position-y: 200px;
+	max-width: 100%;
+	height: 28rem;
+}
+
+footer {
+	background: #99040c; /* Old browsers */
+	background: -moz-linear-gradient(top, #99040c 0%, #99040c 0%, #99040c 0%, #9b0000 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#99040c), color-stop(0%,#99040c), color-stop(0%,#99040c), color-stop(100%,#9b0000)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #99040c 0%,#99040c 0%,#99040c 0%,#9b0000 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #99040c 0%,#99040c 0%,#99040c 0%,#9b0000 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top, #99040c 0%,#99040c 0%,#99040c 0%,#9b0000 100%); /* IE10+ */
+	background: linear-gradient(to bottom, #99040c 0%,#99040c 0%,#99040c 0%,#9b0000 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#99040c', endColorstr='#9b0000',GradientType=0 ); /* IE6-9 */
+	color: #fff;
+}
 	
 	
 /* ----------------- Layerslider CSS only ---------------------- */	
